--- a/index.html
+++ b/index.html
@@ -437,12 +437,12 @@
                 <!-- Portfolio Image 1 -->
                 <div class="space-y-4">
                     <div class="text-center">
-                        <h3 class="text-2xl font-bold mb-2">UX design KPS Dashboard - Built with AI (30 min)</h3>
-                        <p class="text-base-content/80 max-w-6xl mx-auto">Leveraged Claude to develop a comprehensive prompt for constructing a UX design dashboard tailored to KPS requirements. The dashboard effectively visualizes key performance metrics and actionable insights while adhering to the prescribed design system standards. Through iterative prompting, Claude successfully generated a production-ready proof of concept in approximately 30 minutes, demonstrating the efficiency of AI-assisted design workflows.</p>
+                        <h3 class="text-2xl font-bold mb-2">Design Principles</h3>
+                        <p class="text-base-content/80 max-w-6xl mx-auto">Created 6 design principles to guide the development of user-centered products.</p>
                     </div>
                     <div class="group cursor-pointer">
                         <div class="w-full h-[300px] md:h-[600px] lg:h-[1200px] rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 group-hover:scale-[1.01]">
-                            <img src="images/portfolio-03.png" alt="Button types and states - Design System Components showing primary, secondary, tertiary, ghost, and destructive button variants in default, hover, focused, and disabled states" class="w-full h-full object-cover" loading="lazy" />
+                            <img src="images/6designprinciples.png" alt="Button types and states - Design System Components showing primary, secondary, tertiary, ghost, and destructive button variants in default, hover, focused, and disabled states" class="w-full h-full object-cover" loading="lazy" />
                         </div>
                     </div>
                 </div>
@@ -450,12 +450,12 @@
                 <!-- Portfolio Image 2 -->
                 <div class="space-y-4">
                     <div class="text-center">
-                        <h3 class="text-2xl font-bold mb-2">Interactive Button States</h3>
-                        <p class="text-base-content/80 max-w-6xl mx-auto">Detailed exploration of button interaction states including hover, focus, pressed, and disabled variations for optimal user experience.</p>
+                        <h3 class="text-2xl font-bold mb-2">Design System Foundations</h3>
+                        <p class="text-base-content/80 max-w-6xl mx-auto">Foundations are the essential building blocks of a design system, including colours, typography, iconography, spacing, and layout.</p>
                     </div>
                     <div class="group cursor-pointer">
-                        <div class="w-full h-[300px] md:h-[600px] lg:h-[1200px] rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 group-hover:scale-[1.01]">
-                            <img src="images/portfolio-01.png" alt="Button types and states - Design System Components showing primary, secondary, tertiary, ghost, and destructive button variants in default, hover, focused, and disabled states" class="w-full h-full object-cover" loading="lazy" />
+                        <div class="w-full h-[300px] md:h-[600px] lg:h-[1136px] rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 group-hover:scale-[1.01]">
+                            <img src="images/foundations.png" alt="Button types and states - Design System Components showing primary, secondary, tertiary, ghost, and destructive button variants in default, hover, focused, and disabled states" class="w-full h-full object-cover" loading="lazy" />
                         </div>
                     </div>
                 </div>
@@ -476,15 +476,12 @@
                 <!-- Portfolio Image 4 -->
                 <div class="space-y-4">
                     <div class="text-center">
-                        <h3 class="text-2xl font-bold mb-2">Design Workshop Framework</h3>
-                        <p class="text-base-content/80 max-w-6xl mx-auto">Collaborative workshop templates and facilitation guides for cross-functional teams to align on design goals and processes.</p>
+                        <h3 class="text-2xl font-bold mb-2">UX design KPS Dashboard - Built with AI (30 min)</h3>
+                        <p class="text-base-content/80 max-w-6xl mx-auto">Leveraged Claude to develop a comprehensive prompt for constructing a UX design dashboard tailored to KPS requirements. The dashboard effectively visualizes key performance metrics and actionable insights while adhering to the prescribed design system standards. Through iterative prompting, Claude successfully generated a production-ready proof of concept in approximately 30 minutes, demonstrating the efficiency of AI-assisted design workflows.</p>
                     </div>
                     <div class="group cursor-pointer">
-                        <div class="w-full h-[300px] md:h-[600px] lg:h-[1200px] bg-gradient-to-br from-info/20 to-info/10 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 group-hover:scale-[1.01]">
-                            <div class="w-full h-full flex items-center justify-center text-base-content/60 text-2xl font-medium">
-                                <span class="sr-only">Team Workshop Documentation</span>
-                                Portfolio Image 4
-                            </div>
+                        <div class="w-full h-[300px] md:h-[600px] lg:h-[1136px] rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 group-hover:scale-[1.01]">
+                            <img src="images/ux-kpi-dashboard.png" alt="Button types and states - Design System Components showing primary, secondary, tertiary, ghost, and destructive button variants in default, hover, focused, and disabled states" class="w-full h-full object-cover" loading="lazy" />
                         </div>
                     </div>
                 </div>
